--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,22 @@
 {
   "name": "campus_nav",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev server": "nodemon main.js",
+    "migrate": "npx prisma migrate dev --name init"
   },
   "author": "IST",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^5.12.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "prisma": "^5.12.1"
+  }
 }
