--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vuetify": "^3.5.16"
   },
   "devDependencies": {
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.2.8"
   }
