--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,5 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=publ
 JWT_SECRET_ACCESS=hfgvhdvhbdiuch
 JWT_SECRET_REFRESH=87rgyubvdnzjdhsyb
 
+CLIENT_URL=http://localhost:5173
 PORT=3000
